--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,7 +60,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-    - assets/images/homelogo.png
+    - assets/images/homelogo.
+    - assets/images/ttlogo.png
     
     
   # An image asset can refer to one or more resolution-specific "variants", see
