--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^4.0.4
   http: ^0.13.6
+  
 
 dev_dependencies:
   flutter_test:
@@ -60,8 +61,9 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-    - assets/images/homelogo.
+    - assets/images/homelogo.png
     - assets/images/ttlogo.png
+    - assets/images/loginbg.png
     
     
   # An image asset can refer to one or more resolution-specific "variants", see
